--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.4
 loader_version=0.14.8
 
-mod_version=1.18.2-devbuild.3
+mod_version=1.18.2-1.0.0
 maven_group=name.uwu.feytox
 archives_base_name=itemwallet
 
