--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
         exclude(group: "net.fabricmc.fabric-api")
     }
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
-    implementation "io.github.juuxel:libninepatch:${project.ninepatch_version}"
+    include implementation("io.github.juuxel:libninepatch:${project.ninepatch_version}")
 }
 
 processResources {
