--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
     maven {
         url = "https://maven.terraformersmc.com/releases/"
     }
+    maven { url 'https://jitpack.io' }
+    maven { url = "https://api.modrinth.com/maven" }
     mavenCentral()
 }
 
@@ -27,6 +29,8 @@ dependencies {
     }
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
     include implementation("io.github.juuxel:libninepatch:${project.ninepatch_version}")
+
+    modImplementation "com.github.feytox:OptiDevium:${project.minecraft_version}-SNAPSHOT"
 }
 
 processResources {
